--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,11 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'Documentation for PSC'
+
+themeDir="/home/runner/work/doncris/doncris"
 theme="hugo-theme-relearn"
 
 # See also https://github.com/gohugoio/hugo/issues/4691
-
 # "Relearn" theme configuration docs at: https://mcshelby.github.io/hugo-theme-relearn/
 menuTitle = "aaaaaaaaaaaaaaaaaaa"
 
@@ -25,3 +26,4 @@ disableLandingPageButton = false
 #themeVariant = "blue"
 #themeVariant = "learn"
 #themeVariant = "relearn-light"
+
