--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -42,6 +42,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Checkout theme
+        uses: actions/checkout@v3
+        with:
+           # Default: ${{ github.repository }}
+          repository: mcshelby/hugo-theme-relearn
+           # The base URL for the GitHub instance that you are trying to clone from, will use
+            # environment defaults to fetch from the same instance that the workflow is
+            # running from unless specified. Example URLs are https://github.com or
+            # https://my-ghes-server.example.com
+          ####github-server-url: ''
+          
+          submodules: recursive
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
@@ -56,7 +68,7 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --theme "https://mcshelby.github.io/hugo-theme-relearn/"
+            --theme "hugo-theme-relearn"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
