--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -42,6 +42,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Change folder
+        run: |
+          pwd
+          ls /home/runner/work/doncris
+          cd /home/runner/work/doncris/doncris/themes
       - name: Checkout theme
         uses: actions/checkout@v3
         with:
@@ -56,7 +61,9 @@ jobs:
           submodules: recursive
       - name: List folders
         run: |
+          pwd
           ls /home/runner/work/doncris
+          cd /home/runner/work/doncris/doncris/themes
       - name: List folders2
         run: |
           ls /home/runner/work/doncris/doncris
