--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -57,18 +57,18 @@ jobs:
       - name: Lsit current folder
         run: |
           pwd
-      - name: Checkout theme
-        uses: actions/checkout@v3
-        with:
-           # Default: ${{ github.repository }}
-          repository: mcshelby/hugo-theme-relearn
-           # The base URL for the GitHub instance that you are trying to clone from, will use
-            # environment defaults to fetch from the same instance that the workflow is
-            # running from unless specified. Example URLs are https://github.com or
-            # https://my-ghes-server.example.com
-          ####github-server-url: ''
-          
-          submodules: recursive
+      #- name: Checkout theme
+      #  uses: actions/checkout@v3
+      #  with:
+      #     # Default: ${{ github.repository }}
+      #    repository: mcshelby/hugo-theme-relearn
+      #     # The base URL for the GitHub instance that you are trying to clone from, will use
+      #      # environment defaults to fetch from the same instance that the workflow is
+      #      # running from unless specified. Example URLs are https://github.com or
+      #      # https://my-ghes-server.example.com
+      #    ####github-server-url: ''
+      #    
+      #    submodules: recursive
       - name: List folders
         run: |
           pwd \
